# Netflix_Clone_Backend

./: .coveragerc  .dockerignore  .gitignore  Dockerfile  README.md  deploy-docker.py  pyproject.toml  pytest.ini  requirements.txt
.config/: gunicorn.py  netflex.nginx  supervisord.conf
.github/workflows/: Netflex-develop.yml  Netflex-master.yml  django.yml  netflex-master.yml
app/: conftest.py  manage.py
app/config/: settings.py  urls.py  utils.py
app/config/settings/: base.py  develop.py  production.py
app/config/wsgi/: develop.py
app/contents/: admin.py  apis.py  baker_recipes.py  models.py  serializers.py  urls.py  utils.py
app/contents/migrations/: 0001_initial.py  0002_auto_20200320_1605.py  0002_auto_20200324_2120.py  0002_contents_preview_video.py  0003_auto_20200320_1657.py  0003_auto_20200325_1647.py  0003_auto_20200414_1947.py  0004_auto_20200326_1445.py  0005_auto_20200326_1603.py  0006_contents_contents_title_english.py
app/contents/tests/: test_content.py
app/members/: admin.py  apis.py  forms.py  models.py  serializers.py  tests.py  urls.py
app/members/migrations/: 0001_initial.py  0002_auto_20200320_1605.py  0002_auto_20200324_2036.py  0002_auto_20200402_1450.py  0003_profile_watching_videos.py  0003_remove_user_phone_number.py  0003_watching_video_length.py  0004_auto_20200325_1647.py  0004_auto_20200422_1955.py  0004_profile_select_contents.py  0005_auto_20200323_1430.py  0005_auto_20200326_1445.py  0006_auto_20200326_1447.py  0007_auto_20200326_1448.py  0008_auto_20200326_1516.py  (+4 more)
app/moviecrawler/: scrapy.cfg
(+9 files in other folders)
