[tool.poetry]
name = "finalproject"
version = "0.1.0"
description = ""
authors = ["hbyyy <qjaduddl94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "<3.0"
djangorestframework = "^3.11.0"
gunicorn = "^20.0.4"
boto3 = "^1.12.22"
django-storages = "^1.9.1"
psycopg2-binary = "^2.8.4"
supervisor = "^4.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
