[tool.poetry]
name = "finalproject"
version = "0.1.0"
description = ""
authors = ["hbyyy <qjaduddl94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "<3.0"
djangorestframework = "^3.11.0"
gunicorn = "^20.0.4"
boto3 = "^1.12.22"
django-storages = "^1.9.1"
psycopg2-binary = "^2.8.4"
supervisor = "^4.1.0"
Pillow = "^7.0.0"
bs4 = "^0.0.1"
requests = "^2.23.0"
drf-yasg = "^1.17.1"
python-magic = "^0.4.15"
sentry-sdk = "^0.14.3"
coverage = "^5.0.4"
pytest = "^5.4.1"
pytest-django = "^3.8.0"
codecov = "^2.0.22"
pytest-cov = "^2.8.1"
model_bakery = "^1.1.0"

[tool.poetry.dev-dependencies]
notebook = "^6.0.3"
django-extensions = "^2.2.8"
django-debug-toolbar = "^2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
